Fix sintax error

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -83,7 +83,8 @@ services:
     restart: unless-stopped
     ports:
       - "6379:6379"
-    environment: #- REDIS_PASSWORD=dev
+    #environment: 
+    #- REDIS_PASSWORD=dev
 
     volumes:
       - ./data/redis:/bitnami/redis/data
