fix error sintax

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -83,8 +83,9 @@ services:
     restart: unless-stopped
     ports:
       - "6379:6379"
-    #environment: 
-    #- REDIS_PASSWORD=dev
+    environment:
+      - ALLOW_EMPTY_PASSWORD=yes
+      #- REDIS_PASSWORD=dev
 
     volumes:
       - ./data/redis:/bitnami/redis/data
